[package]
name = "pls-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.7"
clap = { version = "4.5.0", features = ["derive"] }
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = ["http1"] }
hyper-util = { version = "0.1.3", features = ["client", "http1", "tokio"] }
log = "0.4.20"
log4rs = { version = "1.3.0", features = ["console_appender"], default-features = false }
tokio = { version = "1.36.0", features = ["io-util", "macros", "net", "rt-multi-thread"] }
